--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+  <script async src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script> 
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
@@ -10,8 +10,6 @@
     <script src="flower.js"></script>
     <script src="stamen.js"></script>
     <script src="signature.js"></script>
-    <script src="background.js"></script>
-    <script src="generator.js"></script> 
-  
-
+    <script src="generator.js"></script>  
+    <script src="background.js"></script> 
 </body></html>
