--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
   </head>
   <body>
-    <script src="sketch.js"></script>
-    <script src="flower.js"></script>
-    <script src="stamen.js"></script>
-    <script src="signature.js"></script>
-    <script src="background.js"></script>
-    <script src="generator.js"></script> 
-  
-
+    <script src="https://unpkg.com/ccapture.js@1.1.0/build/CCapture.all.min.js"></script>
+    <script src="sketch.min.js"></script>
+    <script src="flower-fasterdrawing.min.js"></script>
+    <script src="stamen-fasterdrawing.min.js"></script>
+    <script src="generator.min.js"></script>  
+    <script src="capture.js"></script>  
 </body></html>
