--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <script src="https://unpkg.com/ccapture.js@1.1.0/build/CCapture.all.min.js"></script>
     <script src="sketch.min.js"></script>
-    <script src="flower-fasterdrawing.min.js"></script>
+    <script src="flower-fasterdrawing-huopt.js"></script>
     <script src="stamen-fasterdrawing.min.js"></script>
     <script src="generator.min.js"></script>  
     <script src="capture.js"></script>  
