--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html><html lang="en"><head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
   <body>
     <script src="https://unpkg.com/ccapture.js@1.1.0/build/CCapture.all.min.js"></script>
-    <script src="sketch.min.js"></script>
-    <script src="flower-fasterdrawing.min.js"></script>
-    <script src="stamen-fasterdrawing.min.js"></script>
-    <script src="generator.min.js"></script>  
-    <script src="capture.js"></script>  
+    <script src="sketch.js"></script>
+    <script src="flower-fasterdrawing-huopt.js"></script>
+    <script src="stamen-fasterdrawing.js"></script>
+    <script src="generator.js"></script>  
+    <script src="capture.js"></script> 
+    <script src="signature.js"></script>   
+    <div id="sketch"></div>
+    <div id="button"></div>
 </body></html>
